<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/dbAddAction"
        android:title="Add"
		android:showAsAction="always"
		android:icon="@android:drawable/ic_menu_add"
		android:onClick="addClick"
		/>
</menu>
