<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	>
	<ImageButton android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_alignParentRight="true"
		android:src="@android:drawable/ic_menu_delete"
		android:onClick="deleteClick"
		android:id="@+id/itemDelete"
	/>
	<TextView android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_alignParentLeft="true"
		android:layout_toLeftOf="@id/itemDelete"
		android:onClick="editClick"
		android:id="@+id/itemLabel"
		/>
</RelativeLayout>
